--- a/index.html
+++ b/index.html
@@ -59,15 +59,61 @@
 
           <div id="actionPane">
                <div id="header">Neighborhood Map</div>
+               <ul data-bind="foreach: placeList">
+                    <li data-bind="text: name" ></li>
+               </ul>
           </div>
           <div id="paneToggler" class="paneTogglerRight"><<</div>
 
           <div id="map" class="rightMap"></div>
 
+          <script src="js/lib/knockout-3.2.0.js"></script>
 
           <script>
 
-               var map;
+            var map;
+            var markers = [];
+
+
+
+            var places = [
+                { name: 'Modern',
+                  location: {lat: 41.313897 , lng: -72.913342 },
+                  desc: 'The BEST PIZZA EVER!',
+                  category: 'Food',
+                  isFavorite: true
+                },
+                {
+                   name: 'Himalaya',
+                   location: {lat: 41.6277582, lng: -72.7570101},
+                   desc: 'Good Indian Food',
+                   category: 'Food'  ,
+                   isFavorite: false
+                },
+                {
+                   name: 'Chauncey Peak',
+                   location: {lat: 41.5574852, lng: -72.7591303},
+                   desc: 'Moderate hike with quick view of New Haven and Hartford',
+                   category: 'Hiking',
+                   isFavorite: false
+                },
+                {
+                   name: 'West Hartford Reservoir',
+                   location: {lat: 41.7523814, lng: -72.7890223},
+                   desc: 'Mountain biking for all skill levels.',
+                   category: 'Biking',
+                   isFavorite: false
+                },
+                {
+                   name: 'Rails to Trails Entrance',
+                   location: {lat: 41.7702602, lng: -72.8486968},
+                   desc: 'Paved walkway for leisurely hiking and biking.',
+                   category: 'Biking',
+                   isFavorite: false
+                }
+               ];
+
+
 
                function initializeMap() {
 
@@ -77,15 +123,74 @@
                          mapTypeControl: false
                     });
 
+                    var placeInfoWindow = new google.maps.InfoWindow();
+                    // makeMarkerIcon taken from Udacity sample;  see def'n for more details.
 
+                    /* not working
+                    var defaultIcon = makeMarkerIcon('0091ff');
+                    var favIcon     = makeMarkerIcon('FFFF24');
+                              icon: useIcon,
+                              */
+
+                    var mapBounds = new google.maps.LatLngBounds();
+
+                    for (var i = 0; i < places.length; i++) {
+                         var loc = places[i].location;
+                         var name = places[i].name;
+                         var useIcon = 'defaultIcon';
+                         if (places[i].isFavorite){
+                              useIcon = 'favIcon';
+                         }
+                         var marker = new google.maps.Marker({
+                              map: map,
+                              position: loc,
+                              title: name,
+                              animation: google.maps.Animation.DROP,
+                              id: i
+                         });
+                         mapBounds.extend(marker.position);
+                    }
+                    // i don't see how i could write them differently,
+                    // BUT NOTE THAT this is inspired from Udacity examples.
+                    markers.push(marker);
+
+// move this after finishing marker code...
+                    map.fitBounds(mapBounds);
+                    /*
+                    marker.addListener('click', function(){
+
+                    }
+                    */
+
+
+                    // **** NOTE *** I THINK THE RUBRIC SAYS TO USE KNOCKOUT...(because it changes state?) CHANGE THIS:
                     document.getElementById('paneToggler').addEventListener('click', function () {
                          toggleActionPane();
                     });
 
+                    // **** NOTE *** I THINK RUBRIC SAYS TO USE KNOCKOUT...(because it changes state?) CHANGE THIS:
                     document.getElementById('paneToggler').innerHTML = getTogBarChars('<');
 
                }
 
+      // makeMarkerIcon function taken directly from UDACITY ud864 project sample:
+      // Project_Code_5_BeingStylish.html
+      // found here:  ***TODO ADD THE LINK TO THE GITHUB REPOSITORY *** *** *** ***
+      // This function takes in a COLOR, and then creates a new marker
+      // icon of that color. The icon will be 21 px wide by 34 high, have an origin
+      // of 0, 0 and be anchored at 10, 34).
+      function makeMarkerIcon(markerColor) {
+        var markerImage = new google.maps.MarkerImage(
+          'http://chart.googleapis.com/chart?chst=d_map_spin&chld=1.15|0|'+ markerColor +
+          '|40|_|%E2%80%A2',
+          new google.maps.Size(21, 34),
+          new google.maps.Point(0, 0),
+          new google.maps.Point(10, 34),
+          new google.maps.Size(21,34));
+        return markerImage;
+      }
+
+               // **** NOTE *** RUBRIC SAYS TO USE KNOCKOUT... CHANGE THIS:
                function toggleActionPane () {
                     // toggle visibility of the action pane and resize the map
                     var actionPane = document.getElementById('actionPane');
@@ -104,6 +209,7 @@
                    }
                }
 
+               // **** NOTE *** RUBRIC SAYS TO USE KNOCKOUT... CHANGE THIS:
                function getTogBarChars (direction) {
                     var useChar = '<';
                     var retChar = '';
@@ -116,14 +222,34 @@
                     return retChar;
                }
 
+               // ===============================================================================
+
+            var Place = function (data) {
+               this.name       = ko.observable(data.name);
+               this.location   = ko.observable(data.location);
+               this.desc       = ko.observable(data.desc);
+               this.category   = ko.observable(data.category);
+               this.isFavorite = ko.observable(data.isFavorite);
+            }
+
+            var ViewModel = function () {
+                var self = this;
+
+                this.placeList = ko.observableArray([]);
+                places.forEach(function(individualPlace){
+                    self.placeList.push(new Place(individualPlace));
+                });
+
+            }
+
+            ko.applyBindings(new ViewModel());
+
           </script>
-
-
-
 
           <script async defer
                src="https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing&key=AIzaSyDCiCbk_jLIFqlH2s1gmzdIehfkP7JkTVU&v=3&callback=initializeMap">
           </script>
+
 
      </body>
 </html>
