moved places array to model. defined viewmodel.getPlaces, but no more structural changes.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
      <body>
 
           <div id="actionPane">
-               <div id="header">Neighborhood Map</div>
+               <div id="header">Neighborhood Map (w Model)</div>
                <ul data-bind="foreach: placeList">
                     <li data-bind="text: name" ></li>
                </ul>
@@ -71,12 +71,18 @@
 
           <script>
 
+// TO DO 1/14/18:
+// a) convert to formal MVVM
+// b) add a filter to the pane.
+// c) activate filter functionality
+// d) consider rewriting reused code.
+
             var map;
             var markers = [];
 
-
-
-            var places = [
+            // // // // MODEL // // // // // // // // // // // // // // // // // // // // // // // //
+            var model = {
+            places: [
                 { name: 'Modern',
                   location: {lat: 41.313897 , lng: -72.913342 },
                   desc: 'The BEST PIZZA EVER!',
@@ -111,7 +117,22 @@
                    category: 'Biking',
                    isFavorite: false
                 }
-               ];
+               ]
+            };
+
+
+            // // // // VIEW-MODEL // // // // // // // // // // // // // // // // // // // // // // // //
+            var viewmodel = {
+               getPlaces: function () {
+                    return model.places;
+               }
+
+
+
+
+            };
+
+
 
 
 
@@ -124,31 +145,41 @@
                     });
 
                     var placeInfoWindow = new google.maps.InfoWindow();
-                    // makeMarkerIcon taken from Udacity sample;  see def'n for more details.
-
-                    /* not working
+/*
                     var defaultIcon = makeMarkerIcon('0091ff');
                     var favIcon     = makeMarkerIcon('FFFF24');
-                              icon: useIcon,
-                              */
-
+*/
+                    var mImageDflt    = makeIcon('99AACC', 21, 34, 21, 34);
+                    var mImageFav     = makeIcon('CCCC33', 21, 34, 21, 34);
+                    var mImageDfltSel = makeIcon('99AACC', 21, 34, 21, 34);
+                    var mImageFavSel  = makeIcon('CCCC33', 21, 34, 21, 34);
                     var mapBounds = new google.maps.LatLngBounds();
 
-                    for (var i = 0; i < places.length; i++) {
-                         var loc = places[i].location;
-                         var name = places[i].name;
-                         var useIcon = 'defaultIcon';
-                         if (places[i].isFavorite){
-                              useIcon = 'favIcon';
+                    var thePlaces = viewmodel.getPlaces();
+
+                    for (var i = 0; i < thePlaces.length; i++) {
+                         var loc  = thePlaces[i].location;
+                         var name = thePlaces[i].name;
+                         var useIcon = mImageDflt;
+                         if (thePlaces[i].isFavorite){
+                              useIcon = mImageFav;
                          }
                          var marker = new google.maps.Marker({
                               map: map,
                               position: loc,
                               title: name,
                               animation: google.maps.Animation.DROP,
+                              icon: useIcon,
                               id: i
                          });
                          mapBounds.extend(marker.position);
+
+                         // anticipate and respond to click event
+                         marker.addListener('click', function(){
+                              populateInfoWindow(this, placeInfoWindow);
+                         });
+
+
                     }
                     // i don't see how i could write them differently,
                     // BUT NOTE THAT this is inspired from Udacity examples.
@@ -173,22 +204,78 @@
 
                }
 
-      // makeMarkerIcon function taken directly from UDACITY ud864 project sample:
-      // Project_Code_5_BeingStylish.html
-      // found here:  ***TODO ADD THE LINK TO THE GITHUB REPOSITORY *** *** *** ***
-      // This function takes in a COLOR, and then creates a new marker
-      // icon of that color. The icon will be 21 px wide by 34 high, have an origin
-      // of 0, 0 and be anchored at 10, 34).
-      function makeMarkerIcon(markerColor) {
-        var markerImage = new google.maps.MarkerImage(
-          'http://chart.googleapis.com/chart?chst=d_map_spin&chld=1.15|0|'+ markerColor +
-          '|40|_|%E2%80%A2',
-          new google.maps.Size(21, 34),
-          new google.maps.Point(0, 0),
-          new google.maps.Point(10, 34),
-          new google.maps.Size(21,34));
-        return markerImage;
-      }
+
+               // populateInfoWindow and getStreetView functions taken from UDACITY samples.
+               // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+               // This function populates the infowindow when the marker is clicked. We'll only allow
+               // one infowindow which will open at the marker that is clicked, and populate based
+               // on that markers position.
+               function populateInfoWindow(marker, infowindow) {
+                    // Check to make sure the infowindow is not already opened on this marker.
+                    if (infowindow.marker != marker) {
+                         // Clear the infowindow content to give the streetview time to load.
+                         infowindow.setContent('');
+                         infowindow.marker = marker;
+                         // Make sure the marker property is cleared if the infowindow is closed.
+                         infowindow.addListener('closeclick', function() {
+                           infowindow.marker = null;
+                         });
+
+/************/
+                         var streetViewService = new google.maps.StreetViewService();
+                         var radius = 50;
+                         // In case the status is OK, which means the pano was found, compute the
+                         // position of the streetview image, then calculate the heading, then get a
+                         // panorama from that and set the options
+                         function getStreetView(data, status) {
+                           if (status == google.maps.StreetViewStatus.OK) {
+                             var nearStreetViewLocation = data.location.latLng;
+                             var heading = google.maps.geometry.spherical.computeHeading(
+                                           nearStreetViewLocation, marker.position);
+                              infowindow.setContent('<div>' + marker.title + '</div><div id="pano"></div>');
+                              var panoramaOptions = {
+                                  position: nearStreetViewLocation,
+                                  pov: {
+                                      heading: heading,
+                                      pitch: 30
+                                  }
+                              };
+                             var panorama = new google.maps.StreetViewPanorama(
+                                            document.getElementById('pano'), panoramaOptions);
+                           } else {
+                             infowindow.setContent('<div>' + marker.title + '</div>' +
+                               '<div>No Street View Found</div>');
+                           }
+                         }
+                         // Use streetview service to get the closest streetview image within
+                         // 50 meters of the markers position
+                         streetViewService.getPanoramaByLocation(marker.position, radius, getStreetView);
+/**************/
+
+                         // Open the infowindow on the correct marker.
+                         infowindow.open(map, marker);
+                    }
+               }
+
+
+
+
+                // makeIcon function is a modified copy of makeMarkerIcon function taken from UDACITY ud864 project sample:
+                // Project_Code_5_BeingStylish.html
+                // found here:  ***TODO ADD THE LINK TO THE GITHUB REPOSITORY *** *** *** ***
+               // i took the ICON URL and default sizes from the UDACITY example.
+               // https://developers.google.com/maps/documentation/javascript/3.exp/reference#Icon
+               function makeIcon (markerColor, useWidth, useHeight, scaledWidth, scaledHeight) {
+                    var icon = {
+                         url: 'http://chart.googleapis.com/chart?chst=d_map_spin&chld=1.15|0|' + markerColor + '|40|_|%E2%80%A2',
+                         size: new google.maps.Size(useWidth, useHeight),
+                         origin: new google.maps.Point(0, 0),
+                         anchor: new google.maps.Point(10,34),
+                         scaledSize: new google.maps.Size(scaledWidth, scaledHeight)
+                    };
+                    return icon;
+               }
+
 
                // **** NOTE *** RUBRIC SAYS TO USE KNOCKOUT... CHANGE THIS:
                function toggleActionPane () {
@@ -236,7 +323,8 @@
                 var self = this;
 
                 this.placeList = ko.observableArray([]);
-                places.forEach(function(individualPlace){
+                thePlaces = viewmodel.getPlaces();
+                thePlaces.forEach(function(individualPlace){
                     self.placeList.push(new Place(individualPlace));
                 });
 
